// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Search/> renders Intermediate state correctly  1`] = `
<div
  className="search--wrapper"
>
  <div
    className="search"
  >
    <Icon
      className="magnifier"
      icon={<Memo />}
      size="regular"
    />
    <label
      className="search-label"
    />
    <input
      className="search-input"
      onChange={[Function]}
      onKeyDown={[Function]}
      role="searchbox"
      type="text"
      value=""
    />
    <Memo(ForwardRef(Button))
      className="search-close"
      fill="clear"
      label={
        <Memo(Icon)
          color="success"
          icon={<Memo />}
          size="small"
        />
      }
      onClick={[Function]}
      type="button"
    />
  </div>
  <div
    className="search--spacer"
  >
    <Memo(Text)>
      Velit dolore exercitationem distinctio ipsa numquam quisquam?
    </Memo(Text)>
    <Link>
      Change
    </Link>
  </div>
</div>
`;

exports[`<Search/> renders default state correctly 1`] = `
<div
  className="search--wrapper"
>
  <div
    className="search"
  >
    <Icon
      className="magnifier"
      icon={<Memo />}
      size="regular"
    />
    <label
      className="search-label"
    />
    <input
      className="search-input"
      onChange={[Function]}
      onKeyDown={[Function]}
      role="searchbox"
      type="text"
      value=""
    />
    <Memo(ForwardRef(Button))
      className="search-close"
      fill="clear"
      label={
        <Memo(Icon)
          color="success"
          icon={<Memo />}
          size="small"
        />
      }
      onClick={[Function]}
      type="button"
    />
  </div>
</div>
`;
